40AB9696-B233-4601-9AB2-0B730CD33DA8

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,7 @@ out/
 build/
 # CMake
 cmake-build-*/
-# CMake - Android NDK
-.cxx/
+
 
 # ----- 编译工具临时文件 -----
 # Gradle
@@ -38,3 +37,6 @@ hs_err_pid*.log
 # ----- Android工程 -----
 # 本地属性配置文件
 local.properties
+# CMake - Android NDK
+.cxx/
+.externalNativeBuild/
