--- a/script/version/dependency.toml
+++ b/script/version/dependency.toml
@@ -15,7 +15,7 @@ java_mybatis = "3.5.16"
 java_junit_jupiter = "5.10.2"
 
 
-# ----- Kotlin：核心 -----
+# ----- Kotlin：核心组件 -----
 kotlin_core = "1.9.21"
 
 kotlinx_coroutines = "1.7.3"
@@ -26,7 +26,7 @@ kotlinx_serial_json = "1.6.2"
 kotlin_gradle_ksp = "1.9.21-1.0.16"
 
 
-# ----- Android：核心 -----
+# ----- Android：核心组件 -----
 android_agp = "7.4.2"
 
 android_appcompat = "1.6.1"
@@ -79,7 +79,7 @@ java_mybatis = { group = "org.mybatis", name = "mybatis", version.ref = "java_my
 java_junit_jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "java_junit_jupiter" }
 
 
-# ----- Kotlin：核心 -----
+# ----- Kotlin：核心组件 -----
 # Kotlin标准库
 kotlin_stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin_core" }
 
@@ -89,7 +89,7 @@ kotlinx_coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutin
 kotlinx_serial_json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx_serial_json" }
 
 
-# ----- Android：核心 -----
+# ----- Android：核心组件 -----
 # AppCompat
 android_appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "android_appcompat" }
 # Material Design
@@ -136,7 +136,7 @@ android_room-test = { group = "androidx.room", name = "room-testing", version.re
 
 # 编组
 [bundles]
-# ----- Android：核心 -----
+# ----- Android：核心组件 -----
 android_core = ["android_appcompat", "android_material", "android_constraintLayout"]
 android_coreWithKT = ["android_appcompat", "android_material", "android_constraintLayout", "android_KTX_core", "android_KTX_coroutine", "android_KTX_lifecycleRuntime", "android_KTX_lifecycleViewModel"]
 
