--- a/script/version/dependency.toml
+++ b/script/version/dependency.toml
@@ -3,6 +3,7 @@
 # ----- Java：通用工具 -----
 java_gson = "2.10.1"
 java_slf4j_simple = "2.0.9"
+java_apache_commons_io = "1.3.2"
 
 
 # ----- Java：数据存储 -----
@@ -62,6 +63,9 @@ java_gson = { group = "com.google.code.gson", name = "gson", version.ref = "java
 
 # SLF4J-Simple
 java_slf4j = { group = "org.slf4j", name = "slf4j-simple", version.ref = "java_slf4j_simple" }
+
+# Apache通用工具(IO)
+java_apache_commons_io = { group = "org.apache.commons", name = "commons-io", version.ref = "java_apache_commons_io" }
 
 
 # ----- Java：数据存储 -----
