--- a/misc/version/dependency_public_java.toml
+++ b/misc/version/dependency_public_java.toml
@@ -1,27 +1,36 @@
 # 版本号
 [versions]
 # ----- 实用工具 -----
-apacheCommons-io = "1.3.2"
+apacheCommons_io = "1.3.2"
 slf4j-simple = "2.0.9"
 gson = "2.10.1"
 
 
 # ----- 数据存储 -----
-sqlite = "3.46.0.0"
-mariadb = "3.2.0"
+jdbc_sqlite = "3.46.0.0"
+jdbc_mariadb = "3.2.0"
+
 mybatis = "3.5.16"
 
 
+# ----- 网络通讯 -----
+okhttp_bom = "4.12.0"
+
+okhttps_core = "4.0.3"
+
+
 # ----- 测试工具 -----
-junit-jupiter = "5.10.2"
+junit5_jupiter = "5.10.2"
 
 
 # 组件
 [libraries]
 # ----- 实用工具 -----
-# Apache通用工具(IO)
-apacheCommons-io = { group = "org.apache.commons", name = "commons-io", version.ref = "apacheCommons-io" }
+# < Apache通用工具 >
+# IO
+apacheCommons_io = { group = "org.apache.commons", name = "commons-io", version.ref = "apacheCommons_io" }
 
+# < SLF4J >
 # SLF4J-Simple
 slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j-simple" }
 
@@ -30,15 +39,37 @@ gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 
 # ----- 数据存储 -----
-# JDBC驱动(SQLite)
-jdbc_sqlite = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "sqlite" }
-# JDBC驱动(MariaDB)
-jdbc_mariadb = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "mariadb" }
+# <JDBC驱动>
+# SQLite
+jdbc_sqlite = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "jdbc_sqlite" }
+# MariaDB
+jdbc_mariadb = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "jdbc_mariadb" }
 
 # MyBatis
 mybatis = { group = "org.mybatis", name = "mybatis", version.ref = "mybatis" }
 
 
+# ----- 网络通讯 -----
+# < OkHttp3 >
+# BOM文件（其他组件的版本配置文件）
+okhttp3_bom = { group = "com.squareup.okhttp3", name = "okhttp-bom", version.ref = "okhttp_bom" }
+# 核心
+okhttp3_core = { group = "com.squareup.okhttp3", name = "okhttp" }
+# 调试工具
+okhttp3_logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor" }
+okhttp3_mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver" }
+
+
+# < OkHttps >
+# 核心
+okhttps_core = { group = "cn.zhxu", name = "okhttps", version.ref = "okhttps_core" }
+# GSON支持
+okhttps_gson = { group = "cn.zhxu", name = "okhttps-gson", version.ref = "okhttps_core" }
+# Jackson支持
+okhttps_jackson = { group = "cn.zhxu", name = "okhttps-jackson", version.ref = "okhttps_core" }
+
+
 # ----- 测试工具 -----
-# JUnit-Jupiter
-junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit-jupiter" }
+# < JUnit >
+# Jupiter
+junit5_jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit5_jupiter" }
