--- a/misc/version/dependency_public_java.toml
+++ b/misc/version/dependency_public_java.toml
@@ -22,6 +22,8 @@ okhttps_core = "4.0.3"
 
 
 # ----- 测试工具 -----
+junit4 = "4.13.2"
+
 junit5_jupiter = "5.10.2"
 
 
@@ -77,6 +79,9 @@ okhttps_jackson = { group = "cn.zhxu", name = "okhttps-jackson", version.ref = "
 
 
 # ----- 测试工具 -----
-# < JUnit >
+# < JUnit4 >
+junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
+
+# < JUnit5 >
 # Jupiter
 junit5_jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit5_jupiter" }
