--- a/misc/version/dependency_public_java.toml
+++ b/misc/version/dependency_public_java.toml
@@ -89,7 +89,7 @@ junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
 junit5_bom = { group = "org.junit", name = "junit-bom", version.ref = "junit5_bom" }
 # 平台启动器
 junit5_launcher = { group = "org.junit.platform", name = "junit-platform-launcher" }
-# Jupiter
+# Jupiter（JUnit5引擎的实现）
 junit5_jupiter = { group = "org.junit.jupiter", name = "junit-jupiter-engine" }
 # Vintage（JUnit4及更早版本的兼容模块，可以运行JUnit4以及更早版本的测试代码，可选。）
 junit5_vintage = { group = "org.junit.vintage", name = "junit-vintage-engine" }
