--- a/misc/version/dependency_private_java.toml
+++ b/misc/version/dependency_private_java.toml
@@ -16,6 +16,11 @@ math_base = "1.0.0"
 security_digest = "1.0.0"
 
 
+# ----- 插件 -----
+repo_public = "1.0.0"
+repo_private = "1.0.0"
+
+
 # 组件
 [libraries]
 all = { group = "net.bi4vmr.tool.java", name = "all", version.ref = "all" }
@@ -32,3 +37,12 @@ text_gson = { group = "net.bi4vmr.tool.java", name = "text-gson", version.ref = 
 math_base = { group = "net.bi4vmr.tool.java", name = "math-base", version.ref = "math_base" }
 
 security_digest = { group = "net.bi4vmr.tool.java", name = "security-digest", version.ref = "security_digest" }
+
+
+# Gradle插件
+[plugins]
+# ----- Java -----
+# Maven公开仓库
+repo_public = { id = "net.bi4vmr.gradle.plugin.repo.public", version.ref = "repo_public" }
+# Maven私有仓库
+repo_private = { id = "net.bi4vmr.gradle.plugin.repo.private", version.ref = "repo_private" }
