--- a/misc/version/dependency_public_java.toml
+++ b/misc/version/dependency_public_java.toml
@@ -1,7 +1,7 @@
 # 版本号
 [versions]
 # ----- 实用工具 -----
-apacheCommons_io = "1.3.2"
+apachecommons_io = "1.3.2"
 slf4j-simple = "2.0.9"
 gson = "2.10.1"
 
@@ -12,6 +12,8 @@ jdbc_mariadb = "3.2.0"
 
 mybatis = "3.5.16"
 
+druid = "1.2.25"
+
 
 # ----- 网络通讯 -----
 okhttp3_bom = "4.12.0"
@@ -19,6 +21,10 @@ okhttp3_bom = "4.12.0"
 retrofit2_bom = "2.11.0"
 
 okhttps_core = "4.0.3"
+
+
+# ----- JavaEE框架 -----
+springboot_bom = "3.5.0"
 
 
 # ----- 测试工具 -----
@@ -29,15 +35,20 @@ junit5_bom = "5.12.1"
 mockito_core = "5.16.1"
 
 
+# ----- 插件 -----
+spring_springboot = "3.5.0"
+spring_dependency = "1.1.7"
+
+
 # 组件
 [libraries]
 # ----- 实用工具 -----
 # < Apache通用工具 >
 # IO
-apacheCommons_io = { group = "org.apache.commons", name = "commons-io", version.ref = "apacheCommons_io" }
+apachecommons_io = { group = "org.apache.commons", name = "commons-io", version.ref = "apachecommons_io" }
 
 # < SLF4J >
-# SLF4J-Simple
+# SLF4J・Simple
 slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j-simple" }
 
 # GSON
@@ -51,8 +62,15 @@ jdbc_sqlite = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "jdbc_
 # MariaDB
 jdbc_mariadb = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "jdbc_mariadb" }
 
+# <数据库工具>
 # MyBatis
 mybatis = { group = "org.mybatis", name = "mybatis", version.ref = "mybatis" }
+
+# <数据库连接池>
+# Druid・核心
+druid_core = { group = "com.alibaba", name = "druid", version.ref = "druid" }
+# Druid・SpringBoot支持
+druid_springboot-starter = { group = "com.alibaba", name = "druid-spring-boot-starter", version.ref = "druid" }
 
 
 # ----- 网络通讯 -----
@@ -80,6 +98,18 @@ okhttps_gson = { group = "cn.zhxu", name = "okhttps-gson", version.ref = "okhttp
 okhttps_jackson = { group = "cn.zhxu", name = "okhttps-jackson", version.ref = "okhttps_core" }
 
 
+# ----- JavaEE框架 -----
+# < SpringBoot >
+# BOM文件（其他组件的版本配置文件）
+springboot_bom = { group = "org.springframework.boot", name = "spring-boot-dependencies", version.ref = "springboot_bom" }
+# Starter・核心
+springboot_starter_core = { group = "org.springframework.boot", name = "spring-boot-starter" }
+# Starter・Web
+springboot_starter_web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
+# Starter・测试
+springboot_starter_test = { group = "org.springframework.boot", name = "spring-boot-starter-test" }
+
+
 # ----- 测试工具 -----
 # < JUnit4 >
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
@@ -96,3 +126,21 @@ junit5_vintage = { group = "org.junit.vintage", name = "junit-vintage-engine" }
 
 # < Mockito >
 mockito_core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito_core" }
+
+
+# Gradle插件
+[plugins]
+# ----- Gradle内置插件 -----
+# Java・基础（不建议直接使用，可以选择更具体的库或者应用程序。）
+java_base = { id = "org.gradle.java" }
+# Java・库
+java_library = { id = "org.gradle.java-library" }
+# Java・应用程序
+java_application = { id = "org.gradle.application" }
+
+
+# ----- Spring -----
+# SpringBoot插件（提供构建JAR/WAR包、调试应用等功能，版本号与SpringBoot同步。）
+spring_springboot = { id = "org.springframework.boot", version.ref = "spring_springboot" }
+# Spring版本插件（为SpringBoot等模块引入BOM文件，子模块声明依赖时无需指定版本，以SpringBoot插件版本为准。）
+spring_dependency = { id = "io.spring.dependency-management", version.ref = "spring_dependency" }
